Fix Java compatibility issues and update to Java 17
- Updated Maven configuration to use Java 17
- Fixed getFirst() method call for compatibility with Java 17
- Successfully compiled and tested the game
- Game is now fully functional with working controls and physics